# rpm-qa-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml
src/: lib.rs  parse.rs  raw.rs
tests/fixtures/: README.md  fedora.json  fedora.qf  rpmdb.sqlite
tools/: release.sh
