[package]
name = "rpm-qa"
version = "0.1.0"
edition = "2024"
description = "A thin Rust wrapper around `rpm -qa --json`"
license = "LGPL-2.1-or-later"
repository = "https://github.com/jlebon/rpm-qa-rs"
keywords = ["rpm", "fedora", "rhel", "package"]

[dependencies]
anyhow = "1"
camino = "1"
cap-std = { version = "3", default-features = false, features = ["fs_utf8"] }
rustix = { version = "1", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
