[package]
name = "rpm-qa"
version = "0.3.0"
edition = "2024"
description = "A thin Rust wrapper around `rpm -qa`"
license = "LGPL-2.1-or-later"
repository = "https://github.com/jlebon/rpm-qa-rs"
keywords = ["rpm", "fedora", "rhel", "package"]

[dependencies]
anyhow = "1"
camino = "1"
cap-std-ext = "5"
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
